added user geolocation

--- a/chatbot-ui/src/app/app.component.html
+++ b/chatbot-ui/src/app/app.component.html
@@ -1,2 +1,2 @@
-
+<div *ngIf="!userLocation.allowed" style="position: absolute; z-index: 1; color: rgb(148, 10, 10); background-color: rgb(226, 198, 198); width: 100%; text-align: center;">A localização GPS é obrigatória.</div>
 <div id="webchat" role="main" #botWindow></div>
